--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang=“ja” dir=“ltr”>
  <head>
-  <meta charset=“utf-8”
+  <meta charset=“utf-8”>
   <title>授業内容の復習</title>
  </head>
 <body>
